--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -15,40 +15,32 @@
     max-width: 1400px;
     height: max-content;
     display: flex;
+    flex-direction: column;
     gap: 2%;
     flex-shrink: 0;
     position: relative;
 }
 
 .collection-image {
-    width: 400px;
-    height: auto;
-    border-radius: 20px;
-    overflow: hidden;
-    position: relative;
+    width: 100%;
+    height: max-content;
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding-bottom: 30px;
 }
 
-.short_title {
-    color: #0d3135;
-    font-size: 20px;
-}
 
 .collection-name {
     padding: 0px;
     margin: 0px;
     color: white;
-    position: absolute;
     text-align: center;
     width: 100%;
     height: max-content;
     z-index: 2;
-    top: 45%;
-    bottom: 50%;
     font-size: 35px;
-    font-weight: bold;
-    text-shadow: 0px 0px 5px black;
+    font-weight: 400;
 }
 
 .collection-image img {
@@ -83,8 +75,8 @@
 }
 
 .product-card {
-    height: 500px;
-    width: 280px;
+    height: 45dvh;
+    width: 300px;
     background-color: #f2f2f2;
     overflow: hidden;
     border-radius: 20px;
@@ -94,7 +86,7 @@
 }
 
 .product-image {
-    height: 60%;
+    height: 45%;
     -webkit-user-drag: none;
     user-select: none;
     pointer-events: none;
@@ -116,8 +108,14 @@
 
 
 .product-information {
-    padding: 5%;
-    font-weight: bold;
+    padding: 3% 5%;
+}
+
+.short_title {
+    color: #0d3135;
+    font-size: 1.5dvw;
+    padding-bottom: 5px;
+
 }
 
 .product-title {
@@ -256,15 +254,22 @@ button.add-to-cart-button:hover > img {
     }
 
     .product-card {
-        width: 46dvw;
-        height: 320px;
+        height: 355px;
         max-height: 500px;
-        padding-bottom: 45px;
         border-radius: 15px;
+    }
+
+    .product-image {
+        height: 40%;
     }
 
     .product-image img {
         border-radius: 15px;
+    }
+
+    .short_title {
+        font-size: 4.5dvw;
+        padding-bottom: 3px;
     }
 
     .product-title {
@@ -295,5 +300,31 @@ button.add-to-cart-button:hover > img {
 
     .prev_button{
         display: none;
+    }
+}
+
+
+/* swiper */
+
+.featured-collection-swiper {
+    border-radius: 20px;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+
+.swiper-slide {
+  width: auto;
+  display: flex;
+  justify-content: center;
+}
+
+
+@media (max-width: 450px) {
+    .swiper-button-prev::after, .swiper-button-next::after {
+        font-size: 32px;
     }
 }
