--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -108,7 +108,7 @@
 
 
 .product-information {
-    padding-top: 2%;
+    padding-top: 4.5%;
     padding-right: 4%;
     padding-left: 8%;
 }
@@ -116,6 +116,7 @@
 .short_title {
     color: #0d3135;
     font-size: 1.3dvw;
+    line-height: 1.4;
     font-weight: 400;
 }
 
@@ -123,6 +124,7 @@
     width: 100%;
     color: #0d3135;
     font-size: 1.05dvw;
+    line-height: 1.4;
     font-weight: 300;
 }
 
