--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -69,6 +69,7 @@
       loop: true,
       slidesPerView: 1.2,
       spaceBetween: 15,
+      slidesPerGroup: 3,
       breakpoints: {
         10:{
           slidesPerView: 2,
