--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -75,7 +75,8 @@
 }
 
 .product-card {
-    height: 45dvh;
+    /*height: 45dvh;*/
+    height: max-content;
     width: 300px;
     background-color: #f2f2f2;
     overflow: hidden;
@@ -83,10 +84,11 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    padding: 20px 10px;
 }
 
 .product-image {
-    height: 45%;
+    height: 180px;
     -webkit-user-drag: none;
     user-select: none;
     pointer-events: none;
@@ -107,11 +109,6 @@
 }
 
 
-.product-information {
-    padding-top: 4.5%;
-    padding-right: 4%;
-    padding-left: 8%;
-}
 
 .short_title {
     color: #0d3135;
@@ -136,15 +133,13 @@
 }
 
 .buttons {
+    padding-top: 5px;
+    padding-right: 4px;
     width: 100%;
-    padding: 0% 3%;
     pointer-events: all !important;
     display: flex;
     align-items: center;
     gap: 10px;
-    justify-self: flex-end;
-    position: absolute;
-    bottom: 10px;
 }
 
 
@@ -260,13 +255,13 @@ button.add-to-cart-button:hover > img {
     }
 
     .product-card {
-        height: 335px;
+        height: max-content;
         max-height: 500px;
         border-radius: 10px;
     }
 
     .product-image {
-        height: 40%;
+        height: 100px;
     }
 
     .product-image img {
@@ -331,6 +326,6 @@ button.add-to-cart-button:hover > img {
 
 @media (max-width: 450px) {
     .swiper-button-prev::after, .swiper-button-next::after {
-        font-size: 30px;
+        font-size: 20px;
     }
 }
