--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -84,7 +84,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: 20px 10px;
+    padding: 20px 15px;
 }
 
 .product-image {
@@ -104,11 +104,13 @@
 }
 
 .product-card p {
-    padding: 0px;
+    padding: 3px 0px;
     margin: 0px;
 }
 
-
+.product-information {
+    text-align: center;
+}
 
 .short_title {
     color: #0d3135;
@@ -130,51 +132,20 @@
 .product-prices {
     font-size: 21px;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    padding: 4px 0px;
 }
 
 .buttons {
-    padding-top: 5px;
-    padding-right: 4px;
     width: 100%;
     pointer-events: all !important;
     display: flex;
     align-items: center;
-    gap: 10px;
-}
-
-
-.prev_button,.next_button {
-    all: unset;
-    cursor: pointer;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    color: #f2f2f2;
-    font-size: 20px;
-    height: 20px;
-    width: 20px;
-    padding: 10px;
-    background-color: #f2f2f223;
-    border-radius: 999px;
-    transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    gap: 10px;
+    padding-top: 2px;
 }
-
-.prev_button {
-    position: absolute;
-    left: -5%;
-    top: 50%;
-}
-.next_button {
-    margin-left: 15px;
-}
-
-
-.prev_button:hover,.next_button:hover {
-    transform: scale(0.85);
-    background-color: #f2f2f2;
-    color: black;
-}
-
 
 
 button.buy-now-button {
@@ -262,6 +233,7 @@ button.add-to-cart-button:hover > img {
 
     .product-image {
         height: 100px;
+        padding: 15px;
     }
 
     .product-image img {
@@ -283,7 +255,7 @@ button.add-to-cart-button:hover > img {
     }
 
     .buttons {
-        padding: 0px;
+        padding-top: 3px;
         font-size: 13px;
         gap: 5px;
         bottom: 7px;
@@ -326,6 +298,6 @@ button.add-to-cart-button:hover > img {
 
 @media (max-width: 450px) {
     .swiper-button-prev::after, .swiper-button-next::after {
-        font-size: 20px;
+        display: none;
     }
 }
