--- a/assets/header.css
+++ b/assets/header.css
@@ -41,9 +41,9 @@
     height: 100%;
     display: block;
     align-content: center;
-    font-weight: bold;
+    font-weight: 400;
     color: #F2F2F2;
-    font-size: 16px;
+    font-size: 17px;
     padding: 0px 10px;
 }
 
