--- a/assets/header.css
+++ b/assets/header.css
@@ -123,7 +123,7 @@
 }
 
 .nav_icon,.nav_link,.sub_link,.sub_sub_link,.logo_desktop {
-    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
+    transition: 150ms cubic-bezier(0.46,0.46,0.43,0.99);
 }
 
 .nav_icon:hover,.logo_desktop:hover {
