--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -44,7 +44,7 @@
                 <form class="buttons" method="post" action="/cart/add">
                   <input type="hidden" name="id" value="{{ product.variants.first.id }}">
                   <input type="hidden" name="quantity" value="1">
-                  <button type="submit" class="buy-now-button">شراء الاٌن</button>
+                  <button type="submit" class="buy-now-button">أشتر الأن</button>
                   <button type="submit" class="add-to-cart-button">
                     <img width="auto" height="100%" src="{{ 'cart.svg' | asset_url }}" alt="">
                   </button>
