--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -163,13 +163,14 @@ button.buy-now-button {
 button.buy-now-button:hover {
     background-color: rgb(22, 22, 22);
     color: rgb(255, 255, 255);
-    scale: 0.95;
+    scale: 0.90;
 }
 
 button.add-to-cart-button:hover {
     background-color: rgb(22, 22, 22);
     color:white;
-    scale: 0.95;
+    height: 14px;
+    padding: 8px;
 }
 button.add-to-cart-button:hover img {
     filter: brightness(0) saturate(100%) invert(100%) sepia(67%) saturate(13%) hue-rotate(242deg) brightness(103%) contrast(104%);
@@ -185,6 +186,9 @@ button.add-to-cart-button:hover img {
     font-weight: 500;
     transition: 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
     cursor: pointer;
+    align-items: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
