--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -233,6 +233,7 @@ button.add-to-cart-button:hover img {
         height: max-content;
         max-height: 500px;
         border-radius: 10px;
+        padding: 20px 10px;
     }
 
     .product-image {
