--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -16,7 +16,9 @@
           <div class="swiper-slide">
             <div class="product-card">
               <div class="product-image">
-                <img width="100%" height="100%" src="{{ product.featured_image | image_url }}" alt="" loading="lazy">
+                <a href="{{ product.url }}">
+                  <img width="100%" height="100%" src="{{ product.featured_image | image_url }}" alt="" loading="lazy">
+                </a>
               </div>
               <div class="product-information">
                 <a href="{{ product.url }}">
