--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -100,7 +100,7 @@
     object-fit: contain;
     -webkit-user-drag: none;
     user-select: none;
-    pointer-events: none;
+    pointer-events: all;
 }
 
 .product-card p {
