--- a/assets/product_page.css
+++ b/assets/product_page.css
@@ -143,7 +143,7 @@ button {
 .custom-quantity-selector {
   display: flex;
   align-items: center;
-  border: 2px solid #ffffff;
+  border: 2px solid #000000;
   border-radius: 9999px;
   padding: 5px 10px;
 }
