--- a/assets/header.css
+++ b/assets/header.css
@@ -243,7 +243,7 @@
     text-decoration: none;
     font-size: 14px;
     font-weight: 400;
-    background: rgba(0, 0, 0, 0.1);
+    background: #0000000a;
 }
 
 .floating-dropdown-item::before,
