added sections to layout

--- a/sections/floating-cart.liquid
+++ b/sections/floating-cart.liquid
@@ -229,10 +229,9 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
-
 {% schema %}
 {
-  "name": "Floating Cart",
+  "name": "Floating_Cart",
   "tag": "section",
   "class": "floating-cart-section",
   "settings": [
@@ -391,7 +390,7 @@ document.addEventListener('DOMContentLoaded', function() {
   ],
   "presets": [
     {
-      "name": "Floating Cart"
+      "name": "floating_cart"
     }
   ]
 }
