--- a/assets/floating-cart.css
+++ b/assets/floating-cart.css
@@ -13,7 +13,7 @@
   color: white;
   font-size: 24px;
   transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  z-index: 100000;
+  z-index: 3000000000;
   border: none;
   opacity: 0;
   visibility: hidden;
